--- a/.config/eww/menu/eww.scss
+++ b/.config/eww/menu/eww.scss
@@ -4,10 +4,25 @@
   font-family: Roboto, Noto, "Font Awesome 6 Free", FontAwesome;
 }
 
-/** Generic window ***********************************/
+/** Windows ***********************************/
 .genwin {
-	background-color: #2E3440;
-	border-radius: 16px;
+	background-color: #1a1a1a;
+	border-radius: 20px;
+}
+
+.appwidget {
+	background-color: #1a1a1a;
+	border-radius: 25px;
+}
+
+.systemwidget {
+	background-color: #1a1a1a;
+	border-radius: 25px;
+}
+
+.powerwidget {
+	background-color: #1a1a1a;
+	border-radius: 25px;
 }
 
 /** System ********************************************/
@@ -56,31 +71,46 @@
 
 /** Applications ***************************************/
 .appbox {
-	margin : 15px 0px 0px 25px;
+	margin : 0px;
 }
 
-.app_fox, .app_telegram, .app_discord, .app_terminal,
-.app_files, .app_geany, .app_code, .app_gimp, .app_vbox {
-    background-repeat: no-repeat;
-	background-size: 64px;
-	min-height: 64px;
-	min-width: 64px;
-	margin: 8px 8px 0px 8px;
+.app_terminal, .app_files, .app_vim, .app_browser, .app_discord,
+.app_intellij, .app_minecraft, .app_steam, .app_vbox, .app_gimp, .app_yt-music {
+  background-repeat: no-repeat;
+  background-color: #f5f5f5;
+	background-size: 30px;
+  background-position: center;
+	min-height: 30px;
+	min-width: 30px;
+	margin: 5px;
+	padding: 5px;
+  border-radius: 100px;
 }
 
-.app_fox {}
-.app_telegram {}
-.app_discord {}
 .app_terminal {}
 .app_files {}
-.app_geany {}
-.app_code {}
-.app_gimp {}
+.app_vim {}
+.app_browser {}
+.app_discord {}
+.app_intellij {}
+.app_minecraft {}
+.app_steam {}
 .app_vbox {}
+.app_gimp {}
+.app_yt-music {}
 
 /** Power buttons ***************************************/
 .btn_logout, .btn_sleep, .btn_reboot, .btn_poweroff {
-	font-size : 48px;
+  background-repeat: no-repeat;
+  background-color: #f5f5f5;
+	background-size: 30px;
+  background-position: center;
+	min-height: 30px;
+	min-width: 30px;
+	margin: 5px;
+	padding: 5px;
+  border-radius: 100px;
+	font-size : 27px;
 	font-weight : bold;
 }
 
