--- a/beige_mono/.config/wofi/style.css
+++ b/beige_mono/.config/wofi/style.css
@@ -3,76 +3,90 @@
   font-size: 16px;
 }
 
-window{
-  border-radius: 30px;
-  background-color: rgba(--wofi-rgb-color0, 0);
+window {
+  background-color: transparent;
+}
+
+window > box {
+  border-radius: 10px;
+  background-color: rgba(--wofi-rgb-color2, 1);
+  margin: 2px 9px 8px 2px;
+  box-shadow: 3px 3px 2px 3px #808080;
 }
 
 #input {
-  margin: 0px 150px 0px 150px;
-  border-radius: 100px;
-  border: 10px solid --wofi-color0;
-  background-color: rgba(--wofi-rgb-color6, 1);
-  color: --wofi-color5;
+  margin: 10px;
+  border-radius: 10px;
+  border: 5px solid --wofi-color0;
+  background-color: rgba(--wofi-rgb-color3, 1);
+  color: --wofi-color0;
   font-size: 20px;
   font-weight: bold;
 }
 
 /* search icon */
 #input:first-child > :nth-child(1) {
-  background-color: rgba(--wofi-rgb-color3, 1);
+  background-color: rgba(--wofi-rgb-color0, 1);
   margin: 8px 10px 8px 0px;
   padding: 10px;
   border-radius: 100px;
-  color: --wofi-color6;
+  color: --wofi-color1;
   font-size: 20px;
   font-weight: bold;
 }
 
 /* clear icon */
 #input:first-child > :nth-child(4){
-  background-color: rgba(--wofi-rgb-color3, 1);
+  background-color: rgba(--wofi-rgb-color0, 1);
   margin: 8px 0px 8px 0px;
   padding: 10px;
   border-radius: 100px;
-  color: --wofi-color6;
+  color: --wofi-color1;
   font-size: 20px;
   font-weight: bold;
 }
 
 #inner-box {
-  margin: 20px;
+  margin: 0px 10px;
   padding: 20px;
-  border-radius: 44px;
+  border-radius: 10px;
   background-color: rgba(--wofi-rgb-color0, 1);
 }
 
 #outer-box {
   padding: 0px;
-  border-radius: 30px;
-  background-color: rgba(--wofi-rgb-color0, 0);
+  border-radius: 10px;
+  background-color: rgba(--wofi-rgb-color2, 1);
 }
 
 #text {
   padding: 5px;
-  color: white;
+  color: rgba(--wofi-rgb-color2, 2);
+  transition: all 0.1s ease-in;
 }
 
 #entry {
+  color: --wofi-color0;
   background-color: rgba(0, 0, 0, 0);
   padding: 8px;
   width: 30%;
+  transition: all 0.1s ease-in;
 }
 
 #entry:selected {
-  background-color: --wofi-color6;
-  border-radius: 100px;
-  padding: 8px;
+  color: --wofi-color0;
+  background-color: --wofi-color3;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 0px 0px 0px 20px;
+  outline: none;
+  transition: all 0.1s ease-in;
 }
 
 #text:selected {
-  color: --wofi-color3;
+  color: --wofi-color0;
   font-weight: bold;
+  transition: all 0.1s ease-in;
 }
 
 #scroll {
