--- a/beige_mono/.config/waybar/style.css
+++ b/beige_mono/.config/waybar/style.css
@@ -273,7 +273,7 @@ window#waybar.empty #window {
   opacity: 1;
   background-color: @dark-color;
   padding: 0px 10px;
-  margin: 5px 7px 5px 15px;
+  margin: 5px 7px 5px 11px;
   border-radius: 7px;
   color: @light-color;
   font-size: 17px;
@@ -347,10 +347,10 @@ to {
 
 #battery.critical:not(.charging) {
   opacity: 1;
-  background-color: red;
+  background-color: #ca7081;
   padding: 0px 10px;
-  margin: 7px 0px;
-  border-radius: 30px;
+  margin: 5px 0px;
+  border-radius: 7px;
   color: @light-color;
   font-size: 17px;
   font-weight: bold;
