--- a/beige_mono/.config/wlogout/style.css
+++ b/beige_mono/.config/wlogout/style.css
@@ -23,11 +23,14 @@ button {
 }
 
 button:hover {
-  background-color: #dcd3ca;
+  background-color: #f5ebe1;
+  transition: all 0.2s ease-in;
   background-size: 20%;
 }
 
 button:focus, button:active {
+  background-color: #f5ebe1;
+  transition: all 0.2s ease-in;
   background-size: 35%;
 }
 
